--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="#">Hire Me</a>
         </section>
         <section class="img">
-            <img src="businessman-posing-holding-laptop_70172-887.avif" alt="" id="img">
+            <img src="pngkey.com-girl-png-540254.png" alt="" id="img">
         </section>
         <div class="icons">
             <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
